# parcial

./: .gitignore  parcial.ipynb  pyproject.toml  readme.md
